<resources>
    <string name="app_name">Try-On: Beauty</string>
    <string name="title_activity_basic">BasicActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="lip_products">Lip Products</string>
    <string name="shades">Shades</string>
    <string name="lip_amp_cheek_tint"><![CDATA[Lip & Cheek Tint]]></string>
    <string name="implora">Implora</string>
    <string name="shade_vampire_blood">Shade: Vampire Blood</string>
    <string name="dummy_price">Rp. 22.800,00</string>
</resources>
