<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.binus.tryon.FilterPageActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <SurfaceView
            android:id="@+id/surface"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            app:layout_constraintTop_toTopOf="parent" />

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp">

            <ImageButton
                android:id="@+id/recordButton"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="60dp"
                android:background="@null"
                android:scaleType="centerInside"
                android:src="@drawable/record_selector" />

            <ImageButton
                android:id="@+id/switchCamera"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="15dp"
                android:background="@null"
                android:scaleType="centerInside"
                android:src="@drawable/camera_white" />

            <ImageButton
                android:id="@+id/backButton"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:background="@null"
                android:scaleType="centerInside"

                android:src="@drawable/arrow_left"
                />

            <!--        <ImageButton-->
            <!--            android:id="@+id/openActivity"-->

            <!--            android:layout_width="50dp"-->
            <!--            android:layout_height="50dp"-->
            <!--            android:layout_alignParentStart="false"-->
            <!--            android:layout_alignParentTop="true"-->
            <!--            android:layout_alignParentEnd="true"-->
            <!--            android:layout_marginTop="15dp"-->
            <!--            android:layout_marginEnd="5dp"-->
            <!--            android:background="@null"-->
            <!--            android:scaleType="centerInside"-->
            <!--            android:src="@drawable/open_new_activity" />-->

            <ImageButton
                android:id="@+id/previousMask"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="20dp"
                android:background="@null"
                android:scaleType="centerInside"
                android:src="@drawable/arrow_left" />


            <ImageButton
                android:id="@+id/nextMask"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:background="@null"
                android:scaleType="centerInside"
                android:src="@drawable/arrow_right" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="70dp"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/masks"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:buttonTint="@android:color/white"
                        android:checked="true" />

                    <TextView
                        android:id="@+id/textMasks"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/masks"
                        android:layout_centerHorizontal="true"
                        android:text="Masks"
                        android:textAlignment="center"
                        android:textColor="#ffffff" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="70dp"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/effects"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:buttonTint="@android:color/white"
                        android:checked="false" />

                    <TextView
                        android:id="@+id/textEffects"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/effects"
                        android:layout_centerHorizontal="true"
                        android:text="Effects"
                        android:textAlignment="center"
                        android:textColor="#ffffff" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="70dp"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/filters"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:buttonTint="@android:color/white"
                        android:checked="false" />

                    <TextView
                        android:id="@+id/textFilters"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/filters"
                        android:layout_centerHorizontal="true"
                        android:text="Filters"
                        android:textAlignment="center"
                        android:textColor="#ffffff" />
                </RelativeLayout>
            </LinearLayout>


            <TextView
                android:id="@+id/screenshotModeButton"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_above="@id/recordButton"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="25dp"
                android:background="@drawable/rounded_corners"
                android:clickable="true"
                android:elegantTextHeight="true"
                android:fadingEdgeLength="56dp"
                android:requiresFadingEdge="vertical"
                android:text="  Screenshot  "
                android:textAlignment="center" />

            <TextView
                android:id="@+id/recordModeButton"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_above="@id/recordButton"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="25dp"
                android:background="@drawable/rounded_corners"
                android:clickable="true"
                android:elegantTextHeight="true"
                android:fadingEdgeLength="32dp"
                android:requiresFadingEdge="horizontal"
                android:text="  Record  "
                android:textAlignment="center" />


        </RelativeLayout>

        <TextView
            android:id="@+id/shades"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:fontFamily="@font/opensans_semibold"
            android:text="@string/shades"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/surface" />

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            app:layout_constraintTop_toBottomOf="@id/shades">

            <RadioButton
                android:id="@+id/radio1"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/default_radio_background"
                android:button="@drawable/radio_button"
                android:checked="true" />


        </RadioGroup>

        <androidx.cardview.widget.CardView
            android:id="@+id/product_item_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            app:cardBackgroundColor="@color/softGray"
            app:cardCornerRadius="6dp"
            app:cardElevation="4dp"
            app:contentPadding="16dp"
            app:layout_constraintTop_toBottomOf="@id/radio_group">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <ImageView
                    android:id="@+id/product_image"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/implora"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/product_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/opensans_semibold"
                    android:text="@string/lip_amp_cheek_tint"
                    android:textAllCaps="true"
                    android:textSize="20sp"
                    app:layout_constraintLeft_toRightOf="@id/product_image"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/product_brand"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/opensans_regular"
                    android:text="@string/implora"
                    android:textAllCaps="true"
                    android:textSize="12sp"
                    app:layout_constraintLeft_toRightOf="@id/product_image"
                    app:layout_constraintTop_toBottomOf="@id/product_name" />

                <TextView
                    android:id="@+id/product_shade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="6dp"
                    android:fontFamily="@font/opensans_regular"
                    android:text="@string/shade_vampire_blood"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toTopOf="@id/product_price"
                    app:layout_constraintLeft_toRightOf="@id/product_image" />

                <TextView
                    android:id="@+id/product_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/opensans_light"
                    android:text="@string/dummy_price"
                    android:textAllCaps="true"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/product_image" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>